<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/more_frame_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.nyayozangu.sean.nyayozangustore.MoreFragment">

    <LinearLayout
        android:id="@+id/more_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nyayo_zangu_stores_text"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold" />
        </android.support.v7.widget.Toolbar>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="openAccount"
                    android:orientation="horizontal"
                    tools:ignore="OnClick">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:src="@drawable/ic_person_black_24dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_margin"
                        android:text="@string/account_more_text"
                        android:textAppearance="?attr/textAppearanceListItem" />
                </LinearLayout>

                <!--<LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="OnClick">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:src="@drawable/ic_search_black_24dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_margin"
                        android:text="@string/search_more_text"
                        android:textAppearance="?attr/textAppearanceListItem" />
                </LinearLayout>-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="openProductRequests"
                    android:orientation="horizontal"
                    tools:ignore="OnClick">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:contentDescription="@string/explore_icon_more_desc"
                        android:src="@drawable/ic_explore_black_24dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_margin"
                        android:text="@string/product_requests_more_text"
                        android:textAppearance="?attr/textAppearanceListItem" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="openBlog"
                    android:orientation="horizontal"
                    tools:ignore="OnClick">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:src="@drawable/ic_book_black_24dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_margin"
                        android:text="@string/blog_more_text"
                        android:textAppearance="?attr/textAppearanceListItem" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="openContact"
                    android:orientation="horizontal"
                    tools:ignore="OnClick">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:src="@android:drawable/sym_action_call"
                        android:tint="@color/colorPrimaryDark" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_margin"
                        android:text="@string/contact_us_more_text"
                        android:textAppearance="?attr/textAppearanceListItem" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="openAbout"
                    android:orientation="horizontal"
                    tools:ignore="OnClick">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:src="@drawable/ic_info_black_24dp"
                        android:tint="@color/colorPrimaryDark" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_margin"
                        android:text="@string/about_us_more_text"
                        android:textAppearance="?attr/textAppearanceListItem" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>
